<resources>
    <string name="app_name">YoutubeApi38</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="playlist">playlist</string>
    <string name="back">Back</string>
    <string name="playlists">Playlist</string>
    <string name="_32_videos_series">32 videos series</string>
    <string name="emotional_well_being_n_healing_practices_for_children">Emotional Well-being n Healing Practices for Children</string>
    <string name="in_this_series_we_break_down_the_impact_of_displacement_instability_violence_and_trauma_in_children_and_offer_exercises_to_support_children_in_their_healing_journey">In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
    <string name="how_displacement_instability_amp_uncertainty_affect"><![CDATA[HOW DISPLACEMENT INSTABILITY & UNCERTAINTY AFFECT ...]]></string>
    <string name="videos_series"> videos series</string>
    <string name="Emotional"><![CDATA[Emotional Well-being & Healing \n Practices for Children]]></string>
    <string name="video_series">32 video series</string>
    <string name="playlist1">playlist</string>
    <string name="Emotional1"><![CDATA[Emotional Well-being & Healing \n Practices for Children]]></string>
</resources>